Note license status.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 authors = ["Ceri Storey <cez@necrofish.org.uk>"]
 name = "suppositions"
 version = "0.1.0"
+# Not yet agreed.
+# license = "???"
 
 [dependencies]
 hex-slice = "0.1.0"
