--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 authors = ["Ceri Storey <cez@necrofish.org.uk>"]
+license = "Apache-2.0"
 name = "suppositions"
 version = "0.1.0"
-license = "Apache-2.0"
-
 
 [dependencies]
+env_logger = "0.4.3"
 hex-slice = "0.1.0"
+log = "0.3.8"
 rand = "0.3.16"
