--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ authors = ["Ceri Storey <cez@necrofish.org.uk>"]
 license = "Apache-2.0"
 name = "suppositions"
 version = "0.1.0"
+repository = "https://github.com/cstorey/suppositions"
+documentation = "https://docs.rs/suppositions"
 
 [dependencies]
 env_logger = "0.4.3"
