--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ documentation = "https://docs.rs/suppositions"
 description = "Property testing with automagic shrinking."
 
 [dependencies]
-env_logger = "0.4.3"
-hex-slice = "0.1.0"
 log = "0.3.8"
 rand = "0.3.16"
+hex-slice = "0.1.0"
+[dev-dependencies]
+env_logger = "0.4.3"
