--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 log = "0.4.6"
 rand = "0.6.5"
 hex-slice = "0.1.0"
+rand_xorshift = "0.1.1"
 [dev-dependencies]
 env_logger = "0.4.3"
 [profile.release]
