--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ readme = "README.md"
 
 [dependencies]
 log = "0.4.6"
-rand = "0.6.5"
 hex-slice = "0.1.0"
 rand_xorshift = "0.1.1"
+rand_core = "0.4.0"
+rand_os = "0.1.3"
 [dev-dependencies]
 env_logger = "0.6.1"
 [profile.release]
