--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,7 @@ readme = "README.md"
 [dependencies]
 log = "0.4.6"
 hex-slice = "0.1.0"
-rand_xorshift = "0.2.0"
-rand_core = "0.5.0"
-rand_os = "0.2.0"
+rand = "0.7.2"
 [dev-dependencies]
 env_logger = "0.6.1"
 [profile.release]
